bk_ida/gccida/c1/expand_complex_abs
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_complex_abs/src/optabs.c:2912:26: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  expand_complex_abs( machine_mode mode, rtx op0, rtx target, int unsignedp) 
                         ^
                         enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_complex_abs/src/optabs.c:2914:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class v6; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_complex_abs/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_complex_abs/src/optabs.c:2922:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v14; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_complex_abs/src/optabs.c:2949:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode outmode; // [rsp+14h] [rbp-74h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_complex_abs/src/optabs.c:2952:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class v45; // [rsp+24h] [rbp-64h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_complex_abs/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_complex_abs/src/optabs.c:2959:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v6 = mode_class_0[mode]; 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_complex_abs/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_complex_abs/src/optabs.c:2962:65: error: called object type 'const enum mode_class [59]' is not a function or function pointer
outmode = mode_for_size( 8 * mode_unit_size[mode], ( mode_class)( 2 - ( v6 == MODE_COMPLEX_INT)), 0); 
                                                   ~~~~~~~~~~~~~^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_complex_abs/src/optabs.c:2987:11: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
operand = insn_data_0[insn_code].operand; 
          ^~~~~~~~~~~
          insn_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_complex_abs/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_complex_abs/src/optabs.c:3003:7: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
v16 = insn_data_0[v48].genfun( last_insn, v15); 
      ^~~~~~~~~~~
      insn_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_complex_abs/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_complex_abs/src/optabs.c:3003:30: error: called object type '<dependent type>' is not a function or function pointer
v16 = insn_data_0[v48].genfun( last_insn, v15); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_complex_abs/src/optabs.c:3025:24: error: use of undeclared identifier 'machine_mode'
v21 = convert_modes( ( machine_mode)i, mode, x, unsignedp); 
                       ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_complex_abs/src/optabs.c:3026:29: error: use of undeclared identifier 'machine_mode'
v22 = expand_complex_abs( ( machine_mode)v20, v21, 0LL, unsignedp); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_complex_abs/src/optabs.c:3100:24: error: use of undeclared identifier 'machine_mode'
v37 = convert_modes( ( machine_mode)v35, mode, x, unsignedp); 
                       ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_complex_abs/src/optabs.c:3101:29: error: use of undeclared identifier 'machine_mode'
v38 = expand_complex_abs( ( machine_mode)v35, v37, 0LL, unsignedp); 
                            ^
14 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_complex_abs/src/obj/optabs.o] Error 1
